fix: forced portrair picture removal on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
     }
 
     .portrait {
-        display: none;
+        display: none !important;
     }
 }
 
